--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>HR cof pr_1</title>
-  <meta name="description" content="HR cof_pr1"/>
+  <meta name="description" content="sekretycomunicaciioctober"/>
   <meta name="keywords" content="HR, recruitment">
   <meta property="og:title" content="">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
