--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <div class="container">
     <div id="home-row-1" class="row clearfix">
       <div class="col-12">
-        <h1 class="font-semibold">назва заходу <span class="font-thin">захід</span></h1>
-        <h4 class="font-thin">Коротко про захід <span class="font-semibold">lorem ipsum</span> dolor sit amet</h4>
+        <h2 class="font-semibold">Запрошуємо на серію безкоштовних уроків!</span></h2>
+        <h3 class="font-thin"><i>Вхід можливий тільки за умови попередньої реєстрації </i><span class="icon icon-arrow-down"></span> </h3>
         <br>
         <br>
       </div>
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="embed-responsive embed-responsive-video">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a7UFm6ErMPU?list=RDa7UFm6ErMPU"
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a7UFm6ErMPU?list=RDa7UFm6ErMPU ?rel=0&autoplay=1"
                       frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
@@ -89,7 +89,7 @@
 
       <div class="row mt centered">
         <div class="col-lg-6 col-lg-offset-3">
-          <h1 class="event-persons">Учасники конференції</h1>
+          <h1 class="event-persons">Для кого наші уроки можуть бути цікаві?</h1>
         </div>
       </div>
       <!-- /row -->
@@ -280,26 +280,26 @@
         <div class="col-sm-1 hidden-sm">&nbsp;</div>
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-phone"></i></a></p>
-          <span class="hover-text font-light ">+380 00 000 000 </span></a>
+          <span class="hover-text font-light ">+380 63 613 41 12</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-envelope"></i></a></p>
-          <span class="hover-text font-light ">test@test.co</span></a>
+          <span class="hover-text font-light ">info@hr-kavjarnia.com.ua</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-home"></i></a></p>
-          <span class="hover-text font-light ">Ukraine, Lviv<br>zip code 00000</span></a>
+          <span class="hover-text font-light ">Україна, Львів<br>zip code 00000</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-facebook"></i></a></p>
-          <span class="hover-text font-light ">facebook/link</span></a>
+          <span class="hover-text font-light ">https://www.facebook.com/HRKavjarnia</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
-          <p><a target="_blank" href="#"><i class="icon icon-twitter"></i></a></p>
+          <p><a target="_blank" href="#"><i class="icon icon-vk"></i></a></p>
           <span class="hover-text font-light ">@test</span></a>
         </div>
         <!-- /col12 -->
@@ -312,8 +312,8 @@
   </div>
   <!-- /Slide 6 -->
     <!--<script src="js/html5shiv.js"></script>-->
-    <!--<script src="js/bootstrap.min.js"></script>-->
-    <!--<script src="js/script.js"></script>-->
+
+    <script src="js/script.js"></script>
 
   </div>
   </body>
