--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="col-md-3 col-sm-3">
 
           <div class="user-wrapper">
-            <img src="images/pic3.jpg" class="img-responsive"/>
+            <img src="images/speaker.jpg" class="img-responsive"/>
           </div>
         </div>
 
