--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="sekretycomunicaciioctober"/>
   <meta name="keywords" content="HR, recruitment">
   <meta property="og:title" content="">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -290,17 +292,17 @@
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-home"></i></a></p>
-          <span class="hover-text font-light ">Україна, Львів<br>zip code 00000</span></a>
+          <span class="hover-text font-light ">Львів<br>вул. Грабовського, 11 <br>(3 поверх, 314 каб.)</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-facebook"></i></a></p>
-          <span class="hover-text font-light ">https://www.facebook.com/HRKavjarnia</span></a>
+          <span class="hover-text font-light "><a href="https://www.facebook.com/HRKavjarnia" target="_blank">facebook</a></span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
-          <p><a target="_blank" href="#"><i class="icon icon-vk"></i></a></p>
-          <span class="hover-text font-light ">@test</span></a>
+          <p><a target="_blank" href="#"><i class="icon icon-linkedin"></i></a></p>
+          <span class="hover-text font-light"><a href="https://www.linkedin.com/grp/home?gid=6921453" target="_blank">www.linkedin.com/</a></span></a>
         </div>
         <!-- /col12 -->
         <div class="col-sm-1 hidden-sm">&nbsp;</div>
