--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-facebook"></i></a></p>
-          <span class="hover-text font-light "><a href="https://www.facebook.com/HRKavjarnia" target="_blank">facebook</a></span></a>
+          <span class="hover-text font-light "><a href="https://www.facebook.com/HRKavjarnia" target="_blank">www.facebook.com</a></span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="#"><i class="icon icon-linkedin"></i></a></p>
-          <span class="hover-text font-light"><a href="https://www.linkedin.com/grp/home?gid=6921453" target="_blank">www.linkedin.com/</a></span></a>
+          <span class="hover-text font-light"><a href="https://www.linkedin.com/grp/home?gid=6921453" target="_blank">www.linkedin.com</a></span></a>
         </div>
         <!-- /col12 -->
         <div class="col-sm-1 hidden-sm">&nbsp;</div>
