--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
                   <p class="help-block text-danger" id="error"></p>
                 </div>
+                  <p><small class="text-muted">* Ваші дані не будуть передані 3-ім особам</small></p>
                   <button type="submit" id="send-form" class="btn btn-block btn-danger form-top-btn">Зареєструватись</button>
               </form>
               <div class="clearfix"></div>
