--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
                   <p class="help-block text-danger" id="error"></p>
                 </div>
-                  <p><small class="text-muted">* Ваші дані не будуть передані 3-ім особам</small></p>
                   <button type="submit" id="send-form" class="btn btn-block btn-danger form-top-btn">Зареєструватись</button>
+                  <p><small class="text-muted">* Ваші дані не будуть передані 3-ім особам</small></p>
               </form>
               <div class="clearfix"></div>
             </div>
@@ -285,27 +285,27 @@
       <div id="contact-row-4" class="row">
         <div class="col-sm-1 hidden-sm">&nbsp;</div>
         <div class="col-12 col-sm-2 with-hover-text">
-          <p><a target="_blank" href="#"><i class="icon icon-phone"></i></a></p>
+          <p><a target="_blank"><i class="icon icon-phone"></i></a></p>
           <span class="hover-text font-light ">+380 63 613 41 12</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
-          <p><a target="_blank" href="#"><i class="icon icon-envelope"></i></a></p>
+          <p><a target="_blank"><i class="icon icon-envelope"></i></a></p>
           <span class="hover-text font-light ">info@hr-kavjarnia.com.ua</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
-          <p><a target="_blank" href="#"><i class="icon icon-home"></i></a></p>
+          <p><a target="_blank"><i class="icon icon-home"></i></a></p>
           <span class="hover-text font-light ">Львів<br>вул. Грабовського, 11 <br>(3 поверх, 314 каб.)</span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
-          <p><a target="_blank" href="#"><i class="icon icon-facebook"></i></a></p>
+          <p><a target="_blank" href="https://www.facebook.com/HRKavjarnia"><i class="icon icon-facebook"></i></a></p>
           <span class="hover-text font-light "><a href="https://www.facebook.com/HRKavjarnia" target="_blank">www.facebook.com</a></span></a>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
-          <p><a target="_blank" href="#"><i class="icon icon-linkedin"></i></a></p>
+          <p><a target="_blank" href="https://www.linkedin.com/grp/home?gid=6921453"><i class="icon icon-linkedin"></i></a></p>
           <span class="hover-text font-light"><a href="https://www.linkedin.com/grp/home?gid=6921453" target="_blank">www.linkedin.com</a></span></a>
         </div>
         <!-- /col12 -->
