--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="embed-responsive embed-responsive-video">
-                <video width="320" height="240" autoplay>
+                <video width="320" height="240" autopalay>
                     <source src="http://www.ex.ua/show/190866674/bb92fa47da04258a5d4b9c19761e5c28.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -152,7 +152,7 @@
     <div class="container">
       <div class="col-md-4">
         <div class="pricing_header">
-          <h4>Урок 1. Запізнення. Негативна характеристика чи тип мислення?</h4>
+          <h4><b>Урок 1.</b><br> Запізнення. Негативна характеристика<br> чи тип мислення?</h4>
 
           <div class="space"></div>
         </div>
@@ -169,7 +169,7 @@
       </div>
       <div class="col-md-4">
         <div class="pricing_header">
-          <h4>Урок 2. Що краще для ефективної комунікації: шукати відмінність чи схожість?</h4>
+          <h4><b>Урок 2.</b><br> Що краще для ефективної комунікації: шукати відмінність чи схожість?</h4>
 
           <div class="space"></div>
         </div>
@@ -183,7 +183,7 @@
       </div>
       <div class="col-md-4">
         <div class="pricing_header">
-          <h4>Урок 3. Ще раз про морквочку. Або що мотивує їх прийняти рішення?</h4>
+          <h4><b>Урок 3.</b><br> Ще раз про морквочку. <br>Або що мотивує їх прийняти рішення?</h4>
 
           <div class="space"></div>
         </div>
@@ -230,7 +230,7 @@
 
         <div class="col-md-9 col-sm-9  user-wrapper">
           <div class="description">
-            <h1> Анна Зайцева:</h1>
+            <h3> Анна Зайцева:</h3>
             <hr/>
             <p>
                 - Сертифікований HR (кваліфікація SpHR Центр EU HRM підтверджена в 2013 р.) з 2009 року<br>
@@ -243,10 +243,10 @@
             </p>
 
             <p>
-                Коментар від спікера:<br>
-                "Люди різні. У кожного свої інтереси, труднощі і потреби. І далеко не з кожним легко знайти спільну мову. Мені важко, але ж є ті, хто вміє домовитися з кожним. Як? В чому секрет? Відповідь на це питання цікавить мене віддавна.
+                <b>Коментар від спікера:</b><br>
+                <em>"Люди різні. У кожного свої інтереси, труднощі і потреби. І далеко не з кожним легко знайти спільну мову. Мені важко, але ж є ті, хто вміє домовитися з кожним. Як? В чому секрет? Відповідь на це питання цікавить мене віддавна.
                 Поки навчалася, я спостерігала за тими, чиє вміння домовлятися було на висоті. Потім було багато книжок і тренінгів, на яких вміння спілкуватися з різними людьми відпрацьовувалося крок за кроком. На кожному я відкривала для себе певні секрети. А далі практика, практика, практика.... за 9 років роботи з персоналом я навчилася знаходити спільну мову практично з кожною людиною. І зараз продовжую вчитися, і поділюсь з Вами знаннями і досвідом".
-            </p>
+            </em></p>
 
           </div>
 
