--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </div>
 
         <div class="col-md-9 col-sm-9  user-wrapper">
-          <div class="description">
+          <div class="container-fluid">
             <h3> Анна Зайцева:</h3>
             <hr/>
             <p>
