--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="embed-responsive embed-responsive-video">
-                <video width="320" height="240" autopalay>
-                    <source src="http://www.ex.ua/show/190866674/bb92fa47da04258a5d4b9c19761e5c28.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/NpM9Jc7rdCU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -127,7 +124,7 @@
         <div class="col-lg-3">
           <img class="img-circle" src="images/pic3.jpg" width="140" alt="">
 
-          <h4 class="font-semibold">Менеджери по роботі з клієнтами, консультанти</h4>
+          <h4 class="font-semibold correct">Менеджери по роботі з клієнтами, консультанти</h4>
 
           <p class="about-user"><em>Деколи дрібниця може привести як до фатального провалу так і до шаленого успіху переговорів чи продажу. Як краще зрозуміти свого клієнта та зробити йому вигідну(як для нього, так і для Вас) пропозицію? Дізнаєтесь на наших уроках.</em></p>
         </div>
@@ -261,7 +258,7 @@
   <div class="slide story" id="slide-6" data-slide="6">
     <div class="container">
       <div class="row title-row">
-        <div class="col-12 font-light">Виникли питання? Зв'яжіться з нами!</span></div>
+        <div class="col-12 font-light">Виникли питання? Зв'яжіться з нами!</div>
       </div>
       <!-- /row -->
       <div class="row line-row">
