--- a/redirect.html
+++ b/redirect.html
@@ -14,12 +14,22 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext'
           rel='stylesheet' type='text/css'>
-
-
 </head>
-    <body>
-        <div class="logo">
-            <a href="index.html">Дякуємо за реєстрацію!</a>
+    <body class="redirect" >
+    <div class="slide story">
+        <div class="container">
+            <div class="full-container">
+                <div class="row col-center">
+                    <div class="col-xs-11">
+                        <img src="images/logo.png" width="250" height="250" class="img-responsive col-centered"/>
+                    </div>
+                    <div class="col-xs-11">
+                        <div class="col-12 link font-semibold"><a href="index.html">Дякуємо за реєстрацію!<br>
+                            Незабаром на вказану при реєстрації електронну адресу Ви отримаєте лист з доступом на перший відеоурок.</a></div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
     </body>
 </html>
