--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 <body>
 <div class="top-header">
+<img class="img-responsive" src="images/bg.jpg">
 </div>
 
 <!-- === MAIN Background === -->
@@ -43,7 +44,7 @@
   <div class="container">
     <div id="home-row-1" class="row clearfix">
       <div class="col-12">
-        <h2 class="font-semibold">Запрошуємо на серію безкоштовних уроків!</span></h2>
+        <h2 class="font-semibold">Запрошуємо на серію безкоштовних уроків!</h2>
         <h3 class="font-thin"><i>Доступ можливий тільки за умови попередньої реєстрації </i><img src="images/arrow.png"> </h3>
         <br>
         <br>
@@ -104,7 +105,7 @@
       <!-- /row -->
       <div class="row mt centered">
         <div class="col-lg-3">
-          <img class="img-circle" src="images/pic1.jpg" width="140" alt="">
+          <img class="img-circle" src="images/pic1.jpg" width="150" alt="">
 
           <h4 class="font-semibold">HR-и та рекрутери</h4>
 
@@ -113,7 +114,7 @@
         <!--/col-lg-4 -->
 
         <div class="col-lg-3">
-          <img class="img-circle" src="images/pic2.jpg" width="140" alt="">
+          <img class="img-circle" src="images/pic2.jpg" width="150" alt="">
 
           <h4 class="font-semibold">Власники бізнесу</h4>
 
@@ -122,7 +123,7 @@
         <!--/col-lg-4 -->
 
         <div class="col-lg-3">
-          <img class="img-circle" src="images/pic3.jpg" width="140" alt="">
+          <img class="img-circle" src="images/pic3.jpg" width="150" alt="">
 
           <h4 class="font-semibold correct">Менеджери по роботі з клієнтами, консультанти</h4>
 
@@ -130,7 +131,7 @@
         </div>
         <!--/col-lg-4 -->
         <div class="col-lg-3">
-          <img class="img-circle" src="images/pic3.jpg" width="140" alt="">
+          <img class="img-circle" src="images/pic4.jpg" width="150" alt="">
 
           <h4 class="font-semibold">Прагнете саморозвитку?</h4>
 
@@ -213,7 +214,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-9 text-right">
-          <h2 class="font-semibold">Тренінги проводить:</h2>
+          <h2 class="font-semibold">Уроки проводить:</h2>
         </div>
       </div>
       <!-- USER PROFILE ROW STARTS-->
