--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext'
-        rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
     <script src="http://malsup.github.com/jquery.form.js"></script>
     <script>
@@ -31,7 +31,11 @@
             });
         });
     </script>
-
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter32012566 = new Ya.Metrika({ id:32012566, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");
+</script>
+    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -56,8 +60,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6">
-            <div class="embed-responsive embed-responsive-video">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/NpM9Jc7rdCU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <div class="embed-responsive embed-responsive-video correct">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/NpM9Jc7rdCU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
