--- a/redirect.html
+++ b/redirect.html
@@ -14,6 +14,22 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext'
           rel='stylesheet' type='text/css'>
+    <!-- Facebook Conversion Code for Registrations - МП -->
+    <script>(function() {
+        var _fbq = window._fbq || (window._fbq = []);
+        if (!_fbq.loaded) {
+            var fbds = document.createElement('script');
+            fbds.async = true;
+            fbds.src = '//connect.facebook.net/en_US/fbds.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(fbds, s);
+            _fbq.loaded = true;
+        }
+    })();
+    window._fbq = window._fbq || [];
+    window._fbq.push(['track', '6029021419356', {'value':'0.00','currency':'USD'}]);
+    </script>
+    <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6029021419356&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
 </head>
     <body class="redirect" >
     <div class="slide story">
