--- a/index.html
+++ b/index.html
@@ -282,27 +282,27 @@
         <div class="col-sm-1 hidden-sm">&nbsp;</div>
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank"><i class="icon icon-phone"></i></a></p>
-          <span class="hover-text font-light ">+380 63 613 41 12</span></a>
+          <span class="hover-text font-light ">+380 63 613 41 12</span>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank"><i class="icon icon-envelope"></i></a></p>
-          <span class="hover-text font-light ">info@hr-kavjarnia.com.ua</span></a>
+          <span class="hover-text font-light ">info@hr-kavjarnia.com.ua</span>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank"><i class="icon icon-home"></i></a></p>
-          <span class="hover-text font-light ">Львів<br>вул. Грабовського, 11 <br>(3 поверх, 314 каб.)</span></a>
+          <span class="hover-text font-light ">Львів<br>вул. Грабовського, 11 <br>(3 поверх, 314 каб.)</span>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="https://www.facebook.com/HRKavjarnia"><i class="icon icon-facebook"></i></a></p>
-          <span class="hover-text font-light "><a href="https://www.facebook.com/HRKavjarnia" target="_blank">www.facebook.com</a></span></a>
+          <span class="hover-text font-light "><a href="https://www.facebook.com/HRKavjarnia" target="_blank">www.facebook.com</a></span>
         </div>
         <!-- /col12 -->
         <div class="col-12 col-sm-2 with-hover-text">
           <p><a target="_blank" href="https://www.linkedin.com/grp/home?gid=6921453"><i class="icon icon-linkedin"></i></a></p>
-          <span class="hover-text font-light"><a href="https://www.linkedin.com/grp/home?gid=6921453" target="_blank">www.linkedin.com</a></span></a>
+          <span class="hover-text font-light"><a href="https://www.linkedin.com/grp/home?gid=6921453" target="_blank">www.linkedin.com</a></span>
         </div>
         <!-- /col12 -->
         <div class="col-sm-1 hidden-sm">&nbsp;</div>
